[gd_scene load_steps=6 format=3 uid="uid://cwiv31qfcgpp1"]

[ext_resource type="Script" path="res://entities/menu/play/save_file_menu.gd" id="1_a35m4"]
[ext_resource type="Texture2D" uid="uid://dmsgomoeeclw1" path="res://entities/menu/play/art/white_play.svg" id="2_i0wkr"]
[ext_resource type="Texture2D" uid="uid://bowq6s24cnkgv" path="res://entities/menu/play/art/black_play.svg" id="3_lo5lr"]
[ext_resource type="Texture2D" uid="uid://caopx2brtk1jg" path="res://entities/menu/play/art/white_cross.svg" id="4_5mt5s"]
[ext_resource type="Texture2D" uid="uid://cguu1bwu0gpkw" path="res://entities/menu/play/art/black_cross.svg" id="5_fsriu"]

[node name="SaveFileMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_a35m4")

[node name="BoxContainer" type="BoxContainer" parent="."]
custom_minimum_size = Vector2(400, 50)
layout_mode = 0
offset_right = 408.0
offset_bottom = 50.0

[node name="WorldIcon" type="TextureButton" parent="BoxContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
texture_normal = ExtResource("2_i0wkr")
texture_pressed = ExtResource("3_lo5lr")
texture_hover = ExtResource("3_lo5lr")
stretch_mode = 0

[node name="WorldNameButton" type="RichTextLabel" parent="BoxContainer"]
custom_minimum_size = Vector2(300, 50)
layout_mode = 2
size_flags_stretch_ratio = 8.53
text = "World 1"
autowrap_mode = 0

[node name="DeleteWorldButton" type="TextureButton" parent="BoxContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
texture_normal = ExtResource("4_5mt5s")
texture_pressed = ExtResource("5_fsriu")
texture_hover = ExtResource("5_fsriu")
stretch_mode = 0
